modifying notebooks, lookingg at precalculated descriptors

--- a/notebooks/Data looksie.ipynb
+++ b/notebooks/Data looksie.ipynb
@@ -432,6 +432,20 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": [
+    "try:\n",
+    "    import lzma\n",
+    "except ImportError:\n",
+    "    from backports import lzma\n",
+    "\n",
+    "lzma.open('../../Downloads/Compounds_all_sortedbymw_ver1.0.xz').read()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
