saved biodeg with descriptors to csv, starting NN

--- a/notebooks/Neural Network.ipynb
+++ b/notebooks/Neural Network.ipynb
@@ -2,23 +2,33 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
     "import numpy as np\n",
     "import pandas as pd\n",
-    "import sklearn\n",
-    "import tensorflow as tf"
+    "\n",
+    "import tensorflow as tf\n",
+    "\n",
+    "\n",
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "import seaborn as sns\n",
+    "from math import floor, ceil\n",
+    "from pylab import rcParams\n",
+    "\n",
+    "%matplotlib inline"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "biodeg = pd.read_csv('../../big datasets/featurized_biodeg.csv', low_memory=False)"
+   ]
   },
   {
    "cell_type": "code",
