--- a/notebooks/Neural Network.ipynb
+++ b/notebooks/Neural Network.ipynb
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -230,7 +230,7 @@
        "[5 rows x 1448 columns]"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -241,7 +241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -250,7 +250,7 @@
        "numpy.float64"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -261,7 +261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -273,7 +273,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 56,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -285,7 +285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -1995,7 +1995,7 @@
        "[1055 rows x 1423 columns]"
       ]
      },
-     "execution_count": 58,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2008,7 +2008,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2019,7 +2019,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2029,7 +2029,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2039,7 +2039,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2054,7 +2054,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2069,9 +2069,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "WARNING:tensorflow:From C:\\Users\\ellie\\Miniconda3\\lib\\site-packages\\tensorflow\\python\\framework\\op_def_library.py:263: colocate_with (from tensorflow.python.framework.ops) is deprecated and will be removed in a future version.\n",
+      "Instructions for updating:\n",
+      "Colocations handled automatically by placer.\n"
+     ]
+    }
+   ],
    "source": [
     "n_hidden_1 = 38\n",
     "n_input = train_x.shape[1]\n",
@@ -2092,7 +2102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2106,25 +2116,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "WARNING:tensorflow:From <ipython-input-11-59287dc749d9>:4: calling dropout (from tensorflow.python.ops.nn_ops) with keep_prob is deprecated and will be removed in a future version.\n",
+      "Instructions for updating:\n",
+      "Please use `rate` instead of `keep_prob`. Rate should be set to `rate = 1 - keep_prob`.\n"
+     ]
+    }
+   ],
    "source": [
     "predictions = multilayer_perceptron(x, weights, biases, keep_prob)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "WARNING:tensorflow:From <ipython-input-15-e4601f8c3c82>:1: softmax_cross_entropy_with_logits (from tensorflow.python.ops.nn_ops) is deprecated and will be removed in a future version.\n",
+      "Instructions for updating:\n",
+      "\n",
+      "Future major versions of TensorFlow will allow gradients to flow\n",
+      "into the labels input on backprop by default.\n",
+      "\n",
+      "See `tf.nn.softmax_cross_entropy_with_logits_v2`.\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "cost = tf.reduce_mean(tf.nn.softmax_cross_entropy_with_logits(logits=predictions, labels=y))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2133,21 +2168,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch: 0001 cost= 6776123.413877288\n",
-      "Epoch: 0991 cost= 784299.291156637\n",
-      "Epoch: 1981 cost= 204340.040726585\n",
-      "Epoch: 2971 cost= 41849.370352703\n",
-      "Epoch: 3961 cost= 11261.240252911\n",
-      "Epoch: 4951 cost= 765.765428628\n",
-      "Optimization Finished!\n",
-      "Accuracy: 0.990566\n"
+      "Epoch: 0001 cost= 5060165.161503232\n",
+      "Epoch: 0991 cost= 555067.144453378\n",
+      "Epoch: 1981 cost= 91400.377655699\n",
+      "Epoch: 2971 cost= 10606.916011898\n",
+      "Epoch: 3961 cost= 6205.651773737\n"
      ]
     }
    ],
@@ -2175,8 +2207,76 @@
     "    print(\"Optimization Finished!\")\n",
     "    correct_prediction = tf.equal(tf.argmax(predictions, 1), tf.argmax(y, 1))\n",
     "    accuracy = tf.reduce_mean(tf.cast(correct_prediction, \"float\"))\n",
-    "    print(\"Accuracy:\", accuracy.eval({x: x_test, y: y_test, keep_prob: 1.0}))"
+    "    print(\"Accuracy:\", accuracy.eval({x: x_test, y: y_test, keep_prob: 1.0}))\n",
+    "    MSE = tf.metrics.mean_squared_error(tf.cast(y_test, tf.float32),\n",
+    "    predictions,\n",
+    "    weights=None,\n",
+    "    metrics_collections=None,\n",
+    "    updates_collections=None,\n",
+    "    name=None)\n",
+    "    print(\"MSE:\", MSE)\n",
+    "    fn = tf.metrics.false_negatives(\n",
+    "    tf.cast(y_test, tf.float32),\n",
+    "    predictions,\n",
+    "    weights=None,\n",
+    "    metrics_collections=None,\n",
+    "    updates_collections=None,\n",
+    "    name=None)\n",
+    "    tn = tf.metrics.true_negatives(\n",
+    "    tf.cast(y_test, tf.float32),\n",
+    "    predictions,\n",
+    "    weights=None,\n",
+    "    metrics_collections=None,\n",
+    "    updates_collections=None,\n",
+    "    name=None)\n",
+    "    fp = tf.metrics.false_positives(\n",
+    "    tf.cast(y_test, tf.float32),\n",
+    "    predictions,\n",
+    "    weights=None,\n",
+    "    metrics_collections=None,\n",
+    "    updates_collections=None,\n",
+    "    name=None)\n",
+    "    tp = tf.metrics.true_positives(\n",
+    "    tf.cast(y_test, tf.float32),\n",
+    "    predictions,\n",
+    "    weights=None,\n",
+    "    metrics_collections=None,\n",
+    "    updates_collections=None,\n",
+    "    name=None)\n",
+    "    print(\"FN:\", fn, \"TN:\", tn, \"FP:\", fp, \"TP:\", tp)\n",
+    "    total_error = tf.reduce_sum(tf.square(tf.subtract(tf.cast(y_test, tf.float32), tf.reduce_mean(tf.cast(y_test, tf.float32)))))\n",
+    "    unexplained_error = tf.reduce_sum(tf.square(tf.subtract(tf.cast(y_test, tf.float32), tf.cast(predictions, tf.float32))))\n",
+    "    R_squared = tf.subtract(1.0, tf.divide(unexplained_error, total_error))\n",
+    "    print(R_squared)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
