--- a/notebooks/Neural Network-Copy1.ipynb
+++ b/notebooks/Neural Network-Copy1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3713,10 +3713,140 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "constant_filter = VarianceThreshold(threshold=0)\n",
+    "qconstant_filter = VarianceThreshold(threshold=0.01)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "constant_filter.fit(train_x)\n",
+    "len(train_x.columns[constant_filter.get_support()])\n",
+    "constant_columns = [column for column in train_x.columns if column\n",
+    "                   not in train_x.columns[constant_filter.get_support()]]\n",
+    "\n",
+    "train_x.drop(labels=constant_columns, axis=1, inplace=True)\n",
+    "test_x.drop(labels=constant_columns, axis=1, inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "((837, 1010), (218, 1010))"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "qconstant_filter.fit(train_x)\n",
+    "len(train_x.columns[qconstant_filter.get_support()])\n",
+    "\n",
+    "q_constant_columns = [column for column in train_x.columns if column\n",
+    "                     not in train_x.columns[qconstant_filter.get_support()]]\n",
+    "\n",
+    "train_x = qconstant_filter.transform(train_x)\n",
+    "test_x = qconstant_filter.transform(test_x)\n",
+    "\n",
+    "train_x.shape, test_x.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "correlated_features = set()\n",
+    "correlation_matrix = train_x.corr()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for i in range(len(correlation_matrix.columns)):\n",
+    "    for j in range(i):\n",
+    "        if abs(correlation_matrix.iloc[i,j]) > 0.8:\n",
+    "            colname = correlation_matrix.columns[i]\n",
+    "            correlated_features.add(colname)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "715"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(correlated_features)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train_x = pd.DataFrame(train_x)\n",
+    "test_x = pd.DataFrame(test_x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train_x.drop(labels=correlated_features, axis=1, inplace=True)\n",
+    "test_x.drop(labels=correlated_features, axis=1, inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.preprocessing import StandardScaler\n",
+    "xscaler = StandardScaler().fit(train_x)\n",
+    "train_x = xscaler.transform(train_x)\n",
+    "testscaler = StandardScaler().fit(test_x)\n",
+    "test_x = testscaler.transform(test_x)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "x_train = train_x\n",
     "y_train = train_y\n",
-    "x_test = train_x\n",
-    "y_test = train_y"
+    "x_test = test_x\n",
+    "y_test = test_y"
    ]
   },
   {
@@ -3752,7 +3882,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3791,7 +3921,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3801,168 +3931,160 @@
     "    layer_1 = tf.nn.dropout(layer_1, keep_prob)\n",
     "    out_layer = tf.matmul(layer_1, weights['out']) + biases['out']\n",
     "    \n",
-    "    return out_layer"
+    "    return out_layer\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "WARNING:tensorflow:From C:\\Users\\ellie\\Miniconda3\\lib\\site-packages\\tensorflow\\python\\framework\\op_def_library.py:263: colocate_with (from tensorflow.python.framework.ops) is deprecated and will be removed in a future version.\n",
-      "Instructions for updating:\n",
-      "Colocations handled automatically by placer.\n"
+     "ename": "ImportError",
+     "evalue": "cannot import name 'grid_search' from 'sklearn' (C:\\Users\\ellie\\Miniconda3\\lib\\site-packages\\sklearn\\__init__.py)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mImportError\u001b[0m                               Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-47-5935a5e7dbc5>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[1;32mfrom\u001b[0m \u001b[0msklearn\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mgrid_search\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mImportError\u001b[0m: cannot import name 'grid_search' from 'sklearn' (C:\\Users\\ellie\\Miniconda3\\lib\\site-packages\\sklearn\\__init__.py)"
      ]
     }
    ],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [],
    "source": [
-    "n_hidden_1 = 38\n",
-    "n_input = train_x.shape[1]\n",
-    "n_classes = train_y.shape[1]\n",
+    "param_dist = {'hidden' : [10, 20, 30, 40, 50],\n",
+    "             'prob' : [0.2, 0.4, 0.6, 0.8],\n",
+    "             'size': [32, 45, 60],\n",
+    "             'rate' : [0.05, 0.01, 0.001, 0.001]}\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def setup_model():\n",
+    "    n_hidden_1 = hidden\n",
+    "    n_input = train_x.shape[1]\n",
+    "    n_classes = train_y.shape[1]\n",
     "\n",
-    "weights = {\n",
+    "    weights = {\n",
     "    'h1': tf.Variable(tf.random_normal([n_input, n_hidden_1])),\n",
     "    'out': tf.Variable(tf.random_normal([n_hidden_1, n_classes]))\n",
-    "}\n",
+    "    }\n",
     "\n",
-    "biases = {\n",
+    "    biases = {\n",
     "    'b1': tf.Variable(tf.random_normal([n_hidden_1])),\n",
     "    'out': tf.Variable(tf.random_normal([n_classes]))\n",
-    "}\n",
+    "    }\n",
     "\n",
-    "keep_prob = tf.placeholder(\"float\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "training_epochs = 200\n",
-    "display_step = 90\n",
-    "batch_size = 32\n",
+    "    keep_prob = tf.placeholder(\"float\")\n",
     "\n",
-    "x = tf.placeholder(\"float\", [None, n_input])\n",
-    "y = tf.placeholder(\"float\", [None, n_classes])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "predictions = multilayer_perceptron(x, weights, biases, keep_prob)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 20,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "cost = tf.reduce_mean(tf.nn.softmax_cross_entropy_with_logits(logits=predictions, labels=y))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 21,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "optimizer = tf.train.AdamOptimizer(learning_rate=0.01).minimize(cost)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "with tf.Session() as sess:\n",
-    "    sess.run(tf.global_variables_initializer())\n",
+    "    training_epochs = 200\n",
+    "    display_step = 90\n",
+    "    batch_size = size\n",
+    "\n",
+    "    x = tf.placeholder(\"float\", [None, n_input])\n",
+    "    y = tf.placeholder(\"float\", [None, n_classes])\n",
+    "    predictions = multilayer_perceptron(x, weights, biases, keep_prob)\n",
     "    \n",
-    "    for epoch in range(training_epochs):\n",
-    "        avg_cost = 0.0\n",
-    "        total_batch = int(len(x_train) / batch_size)\n",
-    "        x_batches = np.array_split(x_train, total_batch)\n",
-    "        y_batches = np.array_split(y_train, total_batch)\n",
-    "        for i in range(total_batch):\n",
-    "            batch_x, batch_y = x_batches[i], y_batches[i]\n",
-    "            _, c = sess.run([optimizer, cost], \n",
+    "    cost = tf.reduce_mean(tf.nn.softmax_cross_entropy_with_logits(logits=predictions, labels=y))\n",
+    "    optimizer = tf.train.AdamOptimizer(learning_rate=rate).minimize(cost)\n",
+    "\n",
+    "    return\n",
+    "\n",
+    "def run_model(setup_model):\n",
+    "    with tf.Session() as sess:\n",
+    "        sess.run(tf.global_variables_initializer())\n",
+    "\n",
+    "    \n",
+    "        for epoch in range(training_epochs):\n",
+    "            avg_cost = 0.0\n",
+    "            total_batch = int(len(x_train) / batch_size)\n",
+    "            x_batches = np.array_split(x_train, total_batch)\n",
+    "            y_batches = np.array_split(y_train, total_batch)\n",
+    "            for i in range(total_batch):\n",
+    "                batch_x, batch_y = x_batches[i], y_batches[i]\n",
+    "                _, c = sess.run([optimizer, cost], \n",
     "                            feed_dict={\n",
     "                                x: batch_x, \n",
     "                                y: batch_y, \n",
-    "                                keep_prob: 0.8\n",
+    "                                keep_prob: prob\n",
     "                            })\n",
-    "            avg_cost += c / total_batch\n",
-    "        if epoch % display_step == 0:\n",
-    "            print(\"Epoch:\", '%04d' % (epoch+1), \"cost=\", \\\n",
+    "                avg_cost += c / total_batch\n",
+    "            if epoch % display_step == 0:\n",
+    "                print(\"Epoch:\", '%04d' % (epoch+1), \"cost=\", \\\n",
     "                \"{:.9f}\".format(avg_cost))\n",
-    "    print(\"Optimization Finished!\")\n",
-    "    correct_prediction = tf.equal(tf.argmax(predictions, 1), tf.argmax(y, 1))\n",
-    "    accuracy = tf.reduce_mean(tf.cast(correct_prediction, \"float\"))\n",
-    "    print(\"Accuracy:\", accuracy.eval({x: x_test, y: y_test, keep_prob: 1.0}))\n",
-    "\n",
-    "    label = tf.argmax(y_test, axis=1)\n",
-    "    num_classes = 2\n",
-    "    labels_arr = tf.Variable(label)\n",
-    "    confusion = tf.math.confusion_matrix(labels_arr, predictions, num_classes)\n",
-    "    print(confusion.eval())"
+    "        print(\"Optimization Finished!\")\n",
+    "        correct_prediction = tf.equal(tf.argmax(y, 1), tf.argmax(predictions, 1))\n",
+    "        accuracy = tf.reduce_mean(tf.cast(correct_prediction, \"float\"))\n",
+    "        print(\"Accuracy:\", accuracy.eval({x: x_test, y: y_test, keep_prob: 1.0}))\n",
+    "    \n",
+    "    \n",
+    "        confusion = tf.confusion_matrix(labels=tf.argmax(y, 1), predictions=tf.argmax(predictions, 1), num_classes=2) \n",
+    "        print(confusion.eval({x: x_test, y: y_test, keep_prob: 1.0}))\n",
+    "        \n",
+    "        return hidden, prob, size, rate"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Epoch: 0001 cost= 9769289.223707931\n",
-      "Epoch: 0091 cost= 5913.268704880\n",
-      "Epoch: 0181 cost= 861.812184898\n",
-      "Optimization Finished!\n",
-      "Accuracy: 0.6666667\n",
-      "[[295 258]\n",
-      " [151 133]]\n"
+     "ename": "NameError",
+     "evalue": "name 'prob' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-55-297155e4b118>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mestimator\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mrun_model\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0msetup_model\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;32m<ipython-input-54-f87b09c24908>\u001b[0m in \u001b[0;36mrun_model\u001b[1;34m(setup_model)\u001b[0m\n\u001b[0;32m     45\u001b[0m                                 \u001b[0mx\u001b[0m\u001b[1;33m:\u001b[0m \u001b[0mbatch_x\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     46\u001b[0m                                 \u001b[0my\u001b[0m\u001b[1;33m:\u001b[0m \u001b[0mbatch_y\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 47\u001b[1;33m                                 \u001b[0mkeep_prob\u001b[0m\u001b[1;33m:\u001b[0m \u001b[0mprob\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     48\u001b[0m                             })\n\u001b[0;32m     49\u001b[0m                 \u001b[0mavg_cost\u001b[0m \u001b[1;33m+=\u001b[0m \u001b[0mc\u001b[0m \u001b[1;33m/\u001b[0m \u001b[0mtotal_batch\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'prob' is not defined"
      ]
     }
    ],
    "source": [
-    "with tf.Session() as sess:\n",
-    "    sess.run(tf.global_variables_initializer())\n",
-    "    \n",
-    "    for epoch in range(training_epochs):\n",
-    "        avg_cost = 0.0\n",
-    "        total_batch = int(len(x_train) / batch_size)\n",
-    "        x_batches = np.array_split(x_train, total_batch)\n",
-    "        y_batches = np.array_split(y_train, total_batch)\n",
-    "        for i in range(total_batch):\n",
-    "            batch_x, batch_y = x_batches[i], y_batches[i]\n",
-    "            _, c = sess.run([optimizer, cost], \n",
-    "                            feed_dict={\n",
-    "                                x: batch_x, \n",
-    "                                y: batch_y, \n",
-    "                                keep_prob: 0.5\n",
-    "                            })\n",
-    "            avg_cost += c / total_batch\n",
-    "        if epoch % display_step == 0:\n",
-    "            print(\"Epoch:\", '%04d' % (epoch+1), \"cost=\", \\\n",
-    "                \"{:.9f}\".format(avg_cost))\n",
-    "    print(\"Optimization Finished!\")\n",
-    "    correct_prediction = tf.equal(tf.argmax(y, 1), tf.argmax(predictions, 1))\n",
-    "    accuracy = tf.reduce_mean(tf.cast(correct_prediction, \"float\"))\n",
-    "    print(\"Accuracy:\", accuracy.eval({x: x_test, y: y_test, keep_prob: 1.0}))\n",
-    "    \n",
-    "    sess.run(tf.global_variables_initializer(), feed_dict = {x: x_test, y: y_test, keep_prob: 1.0})\n",
-    "    confusion = tf.confusion_matrix(labels=tf.argmax(y, 1), predictions=tf.argmax(predictions, 1), num_classes=2) \n",
-    "    print(confusion.eval({x: x_test, y: y_test, keep_prob: 1.0}))"
+    "estimator = run_model(setup_model)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
