adding stuff that is a problem to add because my branches have diverged from remote

--- a/notebooks/PaDel druglike.ipynb
+++ b/notebooks/PaDel druglike.ipynb
@@ -14,40 +14,308 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 9,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
     "zinc = pd.read_csv('../../big datasets/zinc_with_fps.csv', low_memory=False)"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 11,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
     "descriptors = pd.read_csv('../../big datasets/csv/concat csv/zinc_descriptors.csv')"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 12,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
     "zinc.head()\n",
     "zinc1=zinc[['ZINC_ID', 'MWT', 'SMILES']]"
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "dd1 = descriptors.drop(['Name'], axis=1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "zincall = zinc1.join(dd1, how='left')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "zincall.fillna(0, inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "zincall.isnull().sum().sum()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "zincall.to_csv('../../big datasets/featurized_zinc.csv')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "zincall.iloc[:,3:1448].astype(float)"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "dd1 = descriptors.drop(['Name'], axis=1)"
+    "from sklearn.utils import shuffle\n",
+    "from sklearn.feature_selection import VarianceThreshold \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "zincall = pd.read_csv('../../big datasets/featurized_zinc.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>nAcid</th>\n",
+       "      <th>ALogP</th>\n",
+       "      <th>ALogp2</th>\n",
+       "      <th>AMR</th>\n",
+       "      <th>apol</th>\n",
+       "      <th>naAromAtom</th>\n",
+       "      <th>nAromBond</th>\n",
+       "      <th>nAtom</th>\n",
+       "      <th>nHeavyAtom</th>\n",
+       "      <th>nH</th>\n",
+       "      <th>...</th>\n",
+       "      <th>AMW</th>\n",
+       "      <th>WTPT-1</th>\n",
+       "      <th>WTPT-2</th>\n",
+       "      <th>WTPT-3</th>\n",
+       "      <th>WTPT-4</th>\n",
+       "      <th>WTPT-5</th>\n",
+       "      <th>WPATH</th>\n",
+       "      <th>WPOL</th>\n",
+       "      <th>XLogP</th>\n",
+       "      <th>Zagreb</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>96</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.0000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.000</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18542</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.2282</td>\n",
+       "      <td>0.052075</td>\n",
+       "      <td>127.3531</td>\n",
+       "      <td>66.375825</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>56.0</td>\n",
+       "      <td>31.0</td>\n",
+       "      <td>25.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>7.414100</td>\n",
+       "      <td>64.582529</td>\n",
+       "      <td>2.083307</td>\n",
+       "      <td>18.406615</td>\n",
+       "      <td>8.158495</td>\n",
+       "      <td>10.248120</td>\n",
+       "      <td>2309.0</td>\n",
+       "      <td>59.0</td>\n",
+       "      <td>1.466</td>\n",
+       "      <td>172.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>42407</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.8844</td>\n",
+       "      <td>3.550963</td>\n",
+       "      <td>93.0641</td>\n",
+       "      <td>44.507895</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>36.0</td>\n",
+       "      <td>21.0</td>\n",
+       "      <td>15.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>8.390860</td>\n",
+       "      <td>42.017990</td>\n",
+       "      <td>2.000857</td>\n",
+       "      <td>10.672885</td>\n",
+       "      <td>8.154633</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>1020.0</td>\n",
+       "      <td>30.0</td>\n",
+       "      <td>2.540</td>\n",
+       "      <td>102.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11721</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>-1.2199</td>\n",
+       "      <td>1.488156</td>\n",
+       "      <td>104.2819</td>\n",
+       "      <td>57.271032</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>50.0</td>\n",
+       "      <td>26.0</td>\n",
+       "      <td>24.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>7.083411</td>\n",
+       "      <td>54.626051</td>\n",
+       "      <td>2.101002</td>\n",
+       "      <td>15.567999</td>\n",
+       "      <td>11.821640</td>\n",
+       "      <td>3.746359</td>\n",
+       "      <td>1516.0</td>\n",
+       "      <td>51.0</td>\n",
+       "      <td>1.382</td>\n",
+       "      <td>152.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>40171</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.4304</td>\n",
+       "      <td>0.185244</td>\n",
+       "      <td>92.4567</td>\n",
+       "      <td>43.660516</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>34.0</td>\n",
+       "      <td>22.0</td>\n",
+       "      <td>12.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>9.237124</td>\n",
+       "      <td>44.793114</td>\n",
+       "      <td>2.036051</td>\n",
+       "      <td>13.723590</td>\n",
+       "      <td>2.618750</td>\n",
+       "      <td>6.034429</td>\n",
+       "      <td>942.0</td>\n",
+       "      <td>38.0</td>\n",
+       "      <td>0.190</td>\n",
+       "      <td>116.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 1444 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       nAcid   ALogP    ALogp2       AMR       apol  naAromAtom  nAromBond  \\\n",
+       "96       0.0  0.0000  0.000000    0.0000   0.000000         0.0        0.0   \n",
+       "18542    0.0  0.2282  0.052075  127.3531  66.375825         0.0        0.0   \n",
+       "42407    0.0  1.8844  3.550963   93.0641  44.507895         0.0        0.0   \n",
+       "11721    0.0 -1.2199  1.488156  104.2819  57.271032         0.0        0.0   \n",
+       "40171    0.0  0.4304  0.185244   92.4567  43.660516         0.0        0.0   \n",
+       "\n",
+       "       nAtom  nHeavyAtom    nH  ...       AMW     WTPT-1    WTPT-2     WTPT-3  \\\n",
+       "96       0.0         0.0   0.0  ...  0.000000   0.000000  0.000000   0.000000   \n",
+       "18542   56.0        31.0  25.0  ...  7.414100  64.582529  2.083307  18.406615   \n",
+       "42407   36.0        21.0  15.0  ...  8.390860  42.017990  2.000857  10.672885   \n",
+       "11721   50.0        26.0  24.0  ...  7.083411  54.626051  2.101002  15.567999   \n",
+       "40171   34.0        22.0  12.0  ...  9.237124  44.793114  2.036051  13.723590   \n",
+       "\n",
+       "          WTPT-4     WTPT-5   WPATH  WPOL  XLogP  Zagreb  \n",
+       "96      0.000000   0.000000     0.0   0.0  0.000     0.0  \n",
+       "18542   8.158495  10.248120  2309.0  59.0  1.466   172.0  \n",
+       "42407   8.154633   0.000000  1020.0  30.0  2.540   102.0  \n",
+       "11721  11.821640   3.746359  1516.0  51.0  1.382   152.0  \n",
+       "40171   2.618750   6.034429   942.0  38.0  0.190   116.0  \n",
+       "\n",
+       "[5 rows x 1444 columns]"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "half = zincall.sample(frac=0.5)\n",
+    "half.head()\n",
+    "hal = half.iloc[:, 6:]\n",
+    "hal.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "constant_filter = VarianceThreshold(threshold=0)\n",
+    "qconstant_filter = VarianceThreshold(threshold=0.01)"
    ]
   },
   {
@@ -56,111 +324,118 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "zincall = zinc1.join(dd1, how='left')"
+    "constant_filter.fit(hal)\n",
+    "len(hal.columns[constant_filter.get_support()])\n",
+    "constant_columns = [column for column in hal.columns if column\n",
+    "                   not in hal.columns[constant_filter.get_support()]]\n",
+    "\n",
+    "hal.drop(labels=constant_columns, axis=1, inplace=True)\n",
+    "#test_x.drop(labels=constant_columns, axis=1, inplace=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "zincall.fillna(0, inplace=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0"
+       "(50872, 1210)"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "zincall.isnull().sum().sum()"
+    "qconstant_filter.fit(hal)\n",
+    "len(hal.columns[qconstant_filter.get_support()])\n",
+    "\n",
+    "q_constant_columns = [column for column in hal.columns if column\n",
+    "                     not in hal.columns[qconstant_filter.get_support()]]\n",
+    "\n",
+    "half = qconstant_filter.transform(hal)\n",
+    "#test_x = qconstant_filter.transform(test_x)\n",
+    "\n",
+    "hal.shape #, test_x.shape"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
-    "zincall.to_csv('../../big datasets/featurized_zinc.csv')"
+    "correlated_features = set()\n",
+    "correlation_matrix = pd.DataFrame(hal).corr()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
-    "zincall.iloc[:,3:1448].astype(float)"
+    "for i in range(len(correlation_matrix.columns)):\n",
+    "    for j in range(i):\n",
+    "        if abs(correlation_matrix.iloc[i,j]) > 0.8:\n",
+    "            colname = correlation_matrix.columns[i]\n",
+    "            correlated_features.add(colname)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "915"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(correlated_features)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "hal = pd.DataFrame(hal)\n",
+    "#test_x = pd.DataFrame(test_x)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "hal.drop(labels=correlated_features, axis=1, inplace=True)\n",
+    "#test_x.drop(labels=correlated_features, axis=1, inplace=True)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "hal.shape\n",
+    "use = hal.sample(frac=0.02)\n",
+    "use.shape\n",
+    "use.to_csv('../../big datasets/use_me_zinc_positive.csv')"
+   ]
   },
   {
    "cell_type": "markdown",
