--- a/notebooks/basic gans.ipynb
+++ b/notebooks/basic gans.ipynb
@@ -546,7 +546,8 @@
     "        logits=tf.layers.dense(hidden2, units=1)\n",
     "        output=tf.sigmoid(logits)\n",
     "        \n",
-    "        return output, logits"
+    "        return output, logits\n",
+    "    ### discriminator should be similar to what i have in the nn"
    ]
   },
   {
